Fixed bug 359: Collections and group within the same line were displayed too close.

--- a/trunk/OpenXava/web/style/portal.css
+++ b/trunk/OpenXava/web/style/portal.css
@@ -424,7 +424,6 @@ TD.list-title {
 }
 
 .ox-layout-label {
-	
 }
 
 .ox-layout-row-spacer {
@@ -432,7 +431,7 @@ TD.list-title {
 }
 
 .ox-layout-data-cell {
-	white-space:nowrap;
+	
 }
 
 .ox-layout-data {
